--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,6 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
   </head>
   <body>
-    <img src="assets/mind.svg"></img>
+    <img src="./public/assets/mind.svg"></img>
   </body>
 </html>
